--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore (files stored at) a given path
-*/results/*.csv
-*/results/*.png
+/results
+/inputs
 
 # Ignore files with a special ending (or content)
 *__pycache__*
