--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,11 +3,11 @@ name: Black
 on:
   push:
     branches:
-      - master
+      - main
       - dev
   pull_request:
     branches:
-      - master
+      - main
       - dev
 
 jobs:
@@ -32,8 +32,8 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           # Enable linters
-          black: true
-          flake8: false
+          black: false
+          flake8: true
           # Mark the following line true if you want linters to attempt to autocorrect your code
           auto_fix: false
           git_name: "Greene Lab Linter"
