--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.8]
         poetry-version: [1.0, 1.1.11]
         os: [ubuntu-18.04, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
@@ -34,12 +34,18 @@ jobs:
         with:
           poetry-version: ${{ matrix.poetry-version }}
 
-      - name: View poetry --help
-        run: poetry --help
+      # - name: View poetry --help
+        # run: poetry --help
 
   check-coverage:
     name: Check coverage
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.8]
+        poetry-version: [1.0, 1.1.11]
+        os: [ubuntu-18.04, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
@@ -47,8 +53,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
-
+          python-version: ${{ matrix.python-version }}
+      
+      - name: Run image
+        uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+      
       - name: Install Python dependencies
         run: pip install pytest coverage coverage-badge
 
