--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -37,35 +37,32 @@ jobs:
       - name: View poetry --help
         run: poetry --help
 
-  # check-coverage:
-    # name: Check coverage
-    # strategy:
-      # fail-fast: false
-      # matrix:
-        # python-version: [3.6, 3.7, 3.8]
-        # poetry-version: [1.0, 1.1.11]
-        # os: [ubuntu-18.04, macos-latest, windows-latest]
-    # runs-on: ${{ matrix.os }}
-    # steps:
-      # - name: Check out Git repository
-        # uses: actions/checkout@v2
+  check-coverage:
+    name: Check coverage
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.9]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v2
 
-      # - name: Set up Python
-        # uses: actions/setup-python@v2
-        # with:
-          # python-version: ${{ matrix.python-version }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       
-      # - name: Run image
-        # uses: abatilo/actions-poetry@v2.0.0
-        # with:
-          # poetry-version: ${{ matrix.poetry-version }}
-      
-      # - name: Install Python dependencies
-        # run: pip install pytest coverage coverage-badge
+      - name: Build package
+        run: |
+          python3 setup.py sdist bdist_wheel
 
-      # - name: Run coverage
-        # run: |
-          # coverage run --source=pommesdispatch -m pytest --junitxml=report.xml
-          # coverage report -m
-          # coverage html
-          # coverage-badge
+      - name: Run coverage
+        run: |
+          pip3 install dist/*.whl
+          pip3 install pytest coverage coverage-badge
+          coverage run --source=pommesdispatch -m pytest --junitxml=report.xml
+          coverage report -m
+          coverage html
+          coverage-badge
