--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,8 @@ control_parameters:
                 'NO1', 'NO2', 'NO3', 'NO4', 'NO5', 'PL',
                 'SE1', 'SE2', 'SE3', 'SE4']
     solver: "gurobi"
-    fuel_cost_pathway: "middle"
+    fuel_cost_pathway: "NZE"
+    emissions_cost_pathway: "long-term"
     activate_emissions_limit: False
     emissions_pathway: "100_percent_linear"
     activate_demand_response: False
