--- a/.github/workflows/packaging_pytests.yml
+++ b/.github/workflows/packaging_pytests.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8]
-        poetry-version: [1.0, 1.1.11]
+        poetry-version: [1.1.13]
         os: [ubuntu-18.04, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
