--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,22 @@ dev = ["pytest", "sphinx", "sphinx_rtd_theme", "sphinx_copybutton"]
 [tool.poetry.urls]
 "Changelog" = "https://pommesdispatch.readthedocs.io/en/latest/changelog.html"
 "Issue Tracker" = "https://github.com/pommes-public/pommesdispatch/issues"
+
+[tool.black]
+line-length = 79
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | ci
+)/
+'''
