--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,6 +35,6 @@ jobs:
           black: true
           flake8: false
           # Mark the following line true if you want linters to attempt to autocorrect your code
-          auto_fix: false
+          auto_fix: true
           git_name: "jokochems"
           git_email: "jokochems@web.de"
