Change git info

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,5 +36,5 @@ jobs:
           flake8: false
           # Mark the following line true if you want linters to attempt to autocorrect your code
           auto_fix: false
-          git_name: "jokochems"
-          git_email: "jokochems@web.de"
+          git_name: "Greene Lab Linter"
+          git_email: "csgreene@upenn.edu"
