Update model to oemof.solph v0.5.0a1 (alpha release of version 0.5)
Note:
- Last interval is inferred.
- For the sake of convenience, pass just the entire year to be simulated and don't care about appending one time step at the end.
- This change is only necessary since storage levels have been redefined in oemof.solph v0.5.0 from before to after flows.

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: pommesdispatch
+name: pommesdispatch_solph_update
 channels:
   - conda-forge
 dependencies:
@@ -7,6 +7,6 @@ dependencies:
   - numpy
   - pandas
   - pip:
-    - oemof.solph==0.4.4
+    - oemof.solph==0.5.0a1
     - pyyaml
 
