--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ control_parameters:
     aggregate_input: False
     countries: ['AT', 'BE', 'CH', 'CZ', 'DE', 'DK1', 'DK2', 'FR', 'NL',
                 'NO1', 'NO2', 'NO3', 'NO4', 'NO5', 'PL',
-                'SE1', 'SE2', 'SE3', 'SE4']
+                'SE1', 'SE2', 'SE3', 'SE4', 'IT']
     solver: "gurobi"
     solver_commandline_options: False
     fuel_cost_pathway: "NZE"
@@ -14,7 +14,7 @@ control_parameters:
     emissions_cost_pathway: "long-term"
     activate_emissions_limit: False
     emissions_pathway: "100_percent_linear"
-    activate_demand_response: False
+    activate_demand_response: True
     demand_response_approach: "DLR"
     demand_response_scenario: "50"
     save_updated_market_values: True
@@ -24,14 +24,14 @@ control_parameters:
 
 # 2) Set model optimization time and frequency
 time_parameters:
-    start_time: "2017-01-01 00:00:00"
-    end_time: "2017-01-02 23:00:00"
+    start_time: "2030-01-01 00:00:00"
+    end_time: "2030-01-02 23:00:00"
     freq: "60min"
 
 # 3) Set input and output data paths
 input_output_parameters:
-    path_folder_input: "./inputs/"
-    path_folder_output: "./results/"
+    path_folder_input: "../inputs/"
+    path_folder_output: "../results/"
 
 # 4) Set rolling horizon parameters (optional)
 rolling_horizon_parameters:
